--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,6 +83,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground font-body antialiased;
+    @apply bg-background text-foreground;
   }
 }
